# imaginary-bifurcations

./: 1d-logistic-animation  1d-logistic-animation.py  1d-logistic.py  1d-logistic_numba.py  Presentation.ipynb  bifurcation-diagram.py  complex_slice.py  font.py  interactive-3D.py  julia-example.py  logistic-equilibrium-complex.py  logistic-equilibrium-complex_numba.py  logistic-equilibrium-complex_numba2.py  logistic-equilibrium-complex_numba3.py  logistic-equilibrium-complex_pyvista.py  logistic-equilibrium-complex_pyvista_interactive copy 2.py  logistic-equilibrium-complex_pyvista_interactive copy.py  logistic-equilibrium-complex_pyvista_interactive.py  logistic-equilibrium.py  logistic-equilibrium_numba.py  one-hump-relation.py  pyproject.toml
.ipynb_checkpoints/: Presentation-checkpoint.ipynb
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
