[project]
name = "imaginary-bifurcations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "pyqt5-tools>=5.15.9.3.3",
    "pyvista>=0.45.0",
    "pyvistaqt>=0.11.2",
    "taichi>=1.7.3",
    "tqdm>=4.67.1",
]
