[project]
name = "imaginary-bifurcations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "pygifsicle>=1.1.0",
    "pyqt5>=5.15.11",
    "pyvista[jupyter]>=0.45.0",
    "pyvistaqt>=0.11.2",
    "taichi>=1.7.3",
    "tqdm>=4.67.1",
    "trame>=3.9.0",
]

[dependency-groups]
dev = [
    "memray>=1.17.1",
]
